service.yaml
apiVersion: v1
kind: Service
metadata:
    name: tomcat-eight-service
    labels: 
        app: tomcatEight
spec:
    selector: 
        app: tomcatEight
    ports:
        - name: http
          port: 80
          targetPort: 8080
    type: NodePort
