ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: my-mc-ingress
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  tls:
  - secretName: test-tls
  rules:
  - host: 
    http:
      paths: 
      - path: /
        backend:
          serviceName: tomcat-eight-service
          servicePort: 80
